--- a/style/style.css
+++ b/style/style.css
@@ -1,17 +1,21 @@
 body {
-  background-color: #42cbf5;
+  background-color: #c9d5ff;
+}
+
+h2 {
+  text-align: center;
 }
 
 #menubalk {
     list-style-type: none;
     padding: 0;
     margin: 0;
-    width: 90px;
+    width: 100px;
     border: 2px solid black;
     height: 100%;
     position: fixed;
     overflow: auto;
-    background-color: #428af5;
+    background-color: #325ae6;
     
 }
 
@@ -39,5 +43,6 @@ li a:hover {
 
 .column.middle {
   width: 50%;
-  background-color: #428af5;
+  background-color: #325ae6;
+  border: 1px solid black;
 }
