--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #c9d5ff;
+  background-image: url(images/background.png);
 }
 
 h2 {
@@ -7,25 +7,25 @@ h2 {
 }
 
 #menubalk {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    width: 100px;
-    border: 2px solid black;
-    height: 100%;
-    position: fixed;
-    overflow: auto;
-    background-color: #325ae6;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  width: 100px;
+  border: 2px solid black;
+  height: 100%;
+  position: fixed;
+  overflow: auto;
+  background-color: #79b6d9;
     
 }
 
 li a {
-    display: block;
-    padding: 8px 16px;
-    text-decoration: none;
-    color: black;
-    text-align: center;
-    border-bottom: 1px solid #555;
+  display: block;
+  padding: 8px 16px;
+  text-decoration: none;
+  color: black;
+  text-align: center;
+  border-bottom: 1px solid #555;
 }
 
 li a:hover:not(.active) {
@@ -48,10 +48,15 @@ li a.active {
 
 .column.middle {
   width: 50%;
-  background-color: #325ae6;
+  background-color: #79b6d9;
   border: 1px solid black;
 }
 
 #links {
   list-style-type: none;
+}
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+  margin: auto;
 }
