--- a/style/style.css
+++ b/style/style.css
@@ -13,7 +13,7 @@ h2 {
   margin: 0;
   width: 100px;
   border: 2px solid black;
-  height: 100%;
+  height: 275px;
   position: fixed;
   overflow: auto;
   background-color: #2bb1ff;
