--- a/style/style.css
+++ b/style/style.css
@@ -7,7 +7,7 @@ h2 {
   text-align: center;
 }
 
-#menubalk {
+.menubalk {
   list-style-type: none;
   padding: 0;
   margin: 0;
@@ -83,10 +83,16 @@ img {
   width: auto/7;
 }
 
-#progress {
-  background-color: rgba(255,0,0,0.7);
-  text-align: center;
+.progressbar {
+  background-color: grey;
+  border-radius: 10px;
   width: 50%;
   margin: auto;
-  border-radius: 20px;
+}
+
+.progressbar>div {
+  background-color: rgba(255, 0, 0, 0.6);
+  width: 10%;
+  height: 15px;
+  border-radius: 10px;
 }
