--- a/style/style.css
+++ b/style/style.css
@@ -92,7 +92,8 @@ img {
 
 .progressbar>div {
   background-color: rgba(255, 0, 0, 0.6);
-  width: 10%;
+  width: 10%; 
   height: 15px;
   border-radius: 10px;
+  font-size: 14px;
 }
